pkg/xds/server/v3/testdata/dataplane.input.yaml
networking:
  transparentProxying:
    redirectPortOutbound: 15001
    redirectPortInbound: 15006
  address: 192.168.0.1
  inbound:
    - port: 80
      servicePort: 8080
    - port: 443
      servicePort: 8443
    - address: 192.168.0.2
      port: 80
      servicePort: 8080
    - address: 192.168.0.2
      port: 443
      servicePort: 8443
